--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content=" Discover the top breakfast items at McDonald’s Philippines, featuring local favorites and global classics ">
   <link rel="canonical" href="https://mcdmenuph.vercel.app">
 <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="nRkUKP6vI20X7BbqmqnNbCzhLXp5-XdAyS1XV-EnRPM" />
     
   <style>
   body {
