--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
 <title> Most Popular Breakfast Items at McDonald’s Philippines</title>
   <meta name="description" content=" Discover the top breakfast items at McDonald’s Philippines, featuring local favorites and global classics ">
   <link rel="canonical" href="https://mcdmenuph.vercel.app">
